kubernetes/apps/network/ingress-nginx/proxy/config/apollo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apollo
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.2.89
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: 10.0.2.89
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-apollo
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host apollo.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apollo
                port:
                  number: 48989
  tls:
    - hosts:
        - *host
