kubernetes/apps/network/ingress-nginx/proxy/config/bitwarden.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: default
spec:
  type: ExternalName
  externalName: ${HOME_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${HOME_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-bitwarden
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host bitwarden.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: bitwarden
                port:
                  number: 7277
  tls:
    - hosts:
        - *host
