kubernetes/apps/network/ingress-nginx/proxy/config/cloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.2.107
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: 10.0.2.107
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-cloud
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host cloud.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cloud
                port:
                  number: 9200
  tls:
    - hosts:
        - *host
