kubernetes/apps/network/ingress-nginx/proxy/config/dockge.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dockge
  namespace: default
spec:
  type: ExternalName
  externalName: ${DOCKGE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${DOCKGE_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-dockge
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host dockge.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dockge
                port:
                  number: 5001
  tls:
    - hosts:
        - *host
