kubernetes/apps/network/ingress-nginx/proxy/config/dumbdrop.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dumbdrop
  namespace: default
spec:
  type: ExternalName
  externalName: ${DUMBDROP_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${DUMBDROP_ADDR}
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
  name: proxy-dumbdrop
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: &host dumbdrop.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dumbdrop
                port:
                  number: 3000
  tls:
    - hosts:
        - *host
