kubernetes/apps/network/ingress-nginx/proxy/config/frigate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: default
spec:
  type: ExternalName
  externalName: ${FRIGATE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${FRIGATE_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-frigate
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: doorbell.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frigate
                port:
                  number: 5000
    - host: frigate.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frigate
                port:
                  number: 5000
  tls:
    - hosts:
        - doorbell.${SECRET_DOMAIN_FBE}
        - frigate.${SECRET_DOMAIN_FBE}
