kubernetes/apps/network/ingress-nginx/proxy/config/home.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  type: ExternalName
  externalName: ${HOME_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${HOME_ADDR}
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN_FBE}"
  name: proxy-home
spec:
  ingressClassName: cilium
  rules:
    - host: &host home.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: home
                port:
                  number: 80
  tls:
    - hosts:
        - *host
