kubernetes/apps/network/ingress-nginx/proxy/config/matrix.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: default
spec:
  type: ExternalName
  externalName: ${MATRIX_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/upstream-vhost: ${MATRIX_ADDR}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_pass "http://${MATRIX_ADDR}:8448";
      proxy_set_header "X-Forwarded-For $remote_addr";
      proxy_set_header "X-Forwarded-Proto $scheme";
      proxy_set_header "Host $host";
      client_max_body_size "500M";
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN_FBS}"
  name: proxy-matrix
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: matrix.${SECRET_DOMAIN_FBS}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: matrix
                port:
                  number: 8448
  tls:
    - hosts:
        - matrix.${SECRET_DOMAIN_FBS}
---
