kubernetes/apps/network/ingress-nginx/proxy/config/notes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  type: ExternalName
  externalName: ${NOTES_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/upstream-vhost: ${NOTES_ADDR}
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN_FBE}"
  name: proxy-notes
spec:
  ingressClassName: cilium
  rules:
    - host: notes.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notes
                port:
                  number: 3000
    - host: webnotes.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notes
                port:
                  number: 3001
    - host: files.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: notes
                port:
                  number: 3125
  tls:
    - hosts:
        - notes.${SECRET_DOMAIN_FBE}
        - files.${SECRET_DOMAIN_FBE}
        - webnotes.${SECRET_DOMAIN_FBE}
