kubernetes/apps/network/ingress-nginx/proxy/config/powerwall.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: powerwall
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.5.200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: 10.0.5.200
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-powerwall
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: &host powerwall.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: powerwall
                port:
                  number: 443
  tls:
    - hosts:
        - *host
