kubernetes/apps/network/ingress-nginx/proxy/config/pve.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: default
spec:
  type: ExternalName
  externalName: ${PVE_ADDR}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: ${PVE_ADDR}
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_FBE}"
  name: proxy-pve
  namespace: default
spec:
  ingressClassName: fbe
  rules:
    - host: pve.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pve
                port:
                  number: 8006
    - host: pve00.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pve
                port:
                  number: 8006
    - host: proxmox.${SECRET_DOMAIN_FBE}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pve
                port:
                  number: 8006
  tls:
    - hosts:
        - pve.${SECRET_DOMAIN_FBE}
        - pve00.${SECRET_DOMAIN_FBE}
        - proxmox.${SECRET_DOMAIN_FBE}
